--- a/evaluation/recording_evaluation_config.json
+++ b/evaluation/recording_evaluation_config.json
@@ -1,11 +1,11 @@
 {
-    "model": "data/pretrained_models/baseline_fp.pt",
-    "index": "data/faiss_indexes/baseline_fp/baseline_fp_small.index",
-    "json": "data/faiss_indexes/baseline_fp/baseline_fp_small.json",
+    "model": "data/pretrained_models/baseline_fp_02.pt",
+    "index": "data/faiss_indexes/baseline_fp/baseline_fp_small_02.index",
+    "json": "data/faiss_indexes/baseline_fp/baseline_fp_small_02.json",
     "test_songs": "data/small_dataset/test_15",
     "csv": "data/deep_test_15_files.csv",
-    "recording": "data/recordings/low_t.wav",
-    "duration": 10,
+    "recording": "data/recordings/high_t.wav",
+    "duration": 15,
     "device": "cpu",
     "sr": 8000,
     "hop_size": 4000,
