--- a/generation/generation_config.json
+++ b/generation/generation_config.json
@@ -1,8 +1,8 @@
 {
-    "input dirs": ["data/small_test"],
+    "input dirs": ["data/small_dataset"],
     "output dir": "data/fingerprints",
     "SR": 8000,
     "HOP SIZE": 4000,
     "batch size": 30,
-    "weights": "data/pretrained_models/baseline_fp.pt"
+    "weights": "data/pretrained_models/baseline_fp_02.pt"
 }
